automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,23 @@ selector {
  */
 
  p {
-   font-size: 16px; /*also 100%, 1em, etc. */
+   font-size: 1em; /*also 100%, 1em, etc. */
+   line-height: 1.5em
  }
+
+figcaption {
+  font-weight: normal;
+  font-size: 0.75em;
+  line-height: 1.5em;
+  font-family: Georgia, Times, serif;
+  /*font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;*/
+
+  color: #777;
+  text-align: right;
+}
+
+.milk-text {
+  font: bold 2.6em 'Elsie Swash Caps', cursive;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+}
