automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
 /* */
 
 p {
-  font-size:36px;
+  font-size: 1em;
+  line-height: 1.5em;
+}
+
+figcaption {
+  /*
+  font-weight: normal;
+  font-size: 0.75em;
+  line-height: 1.5em;
+  font-family: Georgia, Times, serif;
+  */
+  font: normal 0.75em/1.5em Georgia, Times, serif;
 }
