--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
+
 /* */
 
 p {
@@ -12,7 +14,7 @@ figcaption {
   line-height: 1.5em;
   font-family: Georgia, Times, serif;
   */
-  font: normal 0.75em/1.5em Georgia, Times, serif;
+  font: normal 0.75em/1.5em 'Elsie Swash Caps', cursive;
   color: #777;
   text-align: right;
 }
