--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
+@import url(http://fonts.googleapis.com/css?family=Clicker+Script:400,900);
 
 /* */
 
@@ -27,4 +28,8 @@ figcaption {
 
 #logo {
   background: aqua;
+}
+
+#logo h1 {
+  font-family: 'Clicker Script', cursive;
 }
