--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Elsie+Swash+Caps:400,900);
-@import url(http://fonts.googleapis.com/css?family=Clicker+Script:400,900);
+@import url(http://fonts.googleapis.com/css?family=Clicker+Script);
 
 /* */
 
@@ -32,4 +32,8 @@ figcaption {
 
 #logo h1 {
   font-family: 'Clicker Script', cursive;
+}
+
+#logo h2 {
+  font-family: 'Elsie Swash Caps', cursive;
 }
